--- a/css/post-7661.css
+++ b/css/post-7661.css
@@ -6,7 +6,7 @@ button:focus {
 }/* End custom CSS */
 /* Start custom CSS for icon-list, class: .elementor-element-aed44d8 */.footer-details .elementor-icon-list-item.elementor-inline-item {
     padding: 3px 8px;
-    border: 1px solid #9CAF88;
+    border: 1px solid #aaa;
     border-radius: 3px;
     margin-bottom: 4px;
 }
