--- a/css/style_1.css
+++ b/css/style_1.css
@@ -4,7 +4,7 @@
   src:  url('../fonts/feather.eot#iefix') format('embedded-opentype'),
     url('../fonts/feather.ttf') format('truetype'),
     url('../fonts/feather.woff') format('woff'),
-    url('../images/feather.svg#9CAF88ther') format('svg');
+    url('../images/feather.svg#feather') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
