--- a/css/post-1716.css
+++ b/css/post-1716.css
@@ -1,4 +1,4 @@
-.elementor-1716 .elementor-element.elementor-element-a2dd2a1{--display:flex;--flex-direction:column;--container-widget-width:100%;--container-widget-height:initial;--container-widget-flex-grow:0;--container-widget-align-self:initial;--flex-wrap-mobile:wrap;--justify-content:flex-start;--gap:0px 0px;--row-gap:0px;--column-gap:0px;--margin-top:0px;--margin-bottom:0px;--margin-left:0px;--margin-right:0px;--padding-top:0px;--padding-bottom:0px;--padding-left:0px;--padding-right:0px;}.elementor-widget-text-editor{color:var( --e-global-color-text );font-family:var( --e-global-typography-text-font-family ), Sans-serif;font-size:var( --e-global-typography-text-font-size );line-height:var( --e-global-typography-text-line-height );}.elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:var( --e-global-color-primary );}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap, .elementor-widget-text-editor.elementor-drop-cap-view-default .elementor-drop-cap{color:var( --e-global-color-primary );border-color:var( --e-global-color-primary );}.elementor-1716 .elementor-element.elementor-element-37e8fa1{margin:0px 0px calc(var(--kit-widget-spacing, 0px) + 0px) 0px;padding:0px 0px 0px 0px;}#elementor-popup-modal-1716 .dialog-widget-content{animation-duration:0.5s;background-color:var( --e-global-color-719e50a );border-style:solid;border-width:0px 0px 0px 1px;border-color:var( --e-global-color-8be0be0 );margin:0px 0px 0px 0px;}#elementor-popup-modal-1716{background-color:#9CAF8880;justify-content:flex-end;align-items:flex-start;pointer-events:all;}#elementor-popup-modal-1716 .dialog-message{width:600px;height:100vh;align-items:flex-start;padding:40px 40px 40px 40px;}#elementor-popup-modal-1716 .dialog-close-button{display:flex;top:20px;font-size:18px;}body:not(.rtl) #elementor-popup-modal-1716 .dialog-close-button{right:20px;}body.rtl #elementor-popup-modal-1716 .dialog-close-button{left:20px;}#elementor-popup-modal-1716 .dialog-close-button i{color:var( --e-global-color-text );}#elementor-popup-modal-1716 .dialog-close-button svg{fill:var( --e-global-color-text );}#elementor-popup-modal-1716 .dialog-close-button:hover i{color:var( --e-global-color-primary );}@media(max-width:1024px){.elementor-widget-text-editor{font-size:var( --e-global-typography-text-font-size );line-height:var( --e-global-typography-text-line-height );}}@media(max-width:767px){.elementor-widget-text-editor{font-size:var( --e-global-typography-text-font-size );line-height:var( --e-global-typography-text-line-height );}#elementor-popup-modal-1716 .dialog-message{padding:20px 20px 20px 20px;}}/* Start custom CSS for text-editor, class: .elementor-element-37e8fa1 */#yith-ywraq-form table.cart .product-thumbnail {
+.elementor-1716 .elementor-element.elementor-element-a2dd2a1{--display:flex;--flex-direction:column;--container-widget-width:100%;--container-widget-height:initial;--container-widget-flex-grow:0;--container-widget-align-self:initial;--flex-wrap-mobile:wrap;--justify-content:flex-start;--gap:0px 0px;--row-gap:0px;--column-gap:0px;--margin-top:0px;--margin-bottom:0px;--margin-left:0px;--margin-right:0px;--padding-top:0px;--padding-bottom:0px;--padding-left:0px;--padding-right:0px;}.elementor-widget-text-editor{color:var( --e-global-color-text );font-family:var( --e-global-typography-text-font-family ), Sans-serif;font-size:var( --e-global-typography-text-font-size );line-height:var( --e-global-typography-text-line-height );}.elementor-widget-text-editor.elementor-drop-cap-view-stacked .elementor-drop-cap{background-color:var( --e-global-color-primary );}.elementor-widget-text-editor.elementor-drop-cap-view-framed .elementor-drop-cap, .elementor-widget-text-editor.elementor-drop-cap-view-default .elementor-drop-cap{color:var( --e-global-color-primary );border-color:var( --e-global-color-primary );}.elementor-1716 .elementor-element.elementor-element-37e8fa1{margin:0px 0px calc(var(--kit-widget-spacing, 0px) + 0px) 0px;padding:0px 0px 0px 0px;}#elementor-popup-modal-1716 .dialog-widget-content{animation-duration:0.5s;background-color:var( --e-global-color-719e50a );border-style:solid;border-width:0px 0px 0px 1px;border-color:var( --e-global-color-8be0be0 );margin:0px 0px 0px 0px;}#elementor-popup-modal-1716{background-color:#00000080;justify-content:flex-end;align-items:flex-start;pointer-events:all;}#elementor-popup-modal-1716 .dialog-message{width:600px;height:100vh;align-items:flex-start;padding:40px 40px 40px 40px;}#elementor-popup-modal-1716 .dialog-close-button{display:flex;top:20px;font-size:18px;}body:not(.rtl) #elementor-popup-modal-1716 .dialog-close-button{right:20px;}body.rtl #elementor-popup-modal-1716 .dialog-close-button{left:20px;}#elementor-popup-modal-1716 .dialog-close-button i{color:var( --e-global-color-text );}#elementor-popup-modal-1716 .dialog-close-button svg{fill:var( --e-global-color-text );}#elementor-popup-modal-1716 .dialog-close-button:hover i{color:var( --e-global-color-primary );}@media(max-width:1024px){.elementor-widget-text-editor{font-size:var( --e-global-typography-text-font-size );line-height:var( --e-global-typography-text-line-height );}}@media(max-width:767px){.elementor-widget-text-editor{font-size:var( --e-global-typography-text-font-size );line-height:var( --e-global-typography-text-line-height );}#elementor-popup-modal-1716 .dialog-message{padding:20px 20px 20px 20px;}}/* Start custom CSS for text-editor, class: .elementor-element-37e8fa1 */#yith-ywraq-form table.cart .product-thumbnail {
     display: table-cell;
     width: 120px;
     padding: 10px;
@@ -26,7 +26,7 @@
     flex-basis: 40%;
     margin-left: 0% !important;
     padding: 40px;
-    border: 1px solid #9CAF88;
+    border: 1px solid #999;
 }
 .ywraq-form-table-wrapper.wide form#yith-ywraq-form {
     flex-basis: 60% !important;
@@ -40,8 +40,8 @@
     font-weight: bold;
     border-radius: 5px;
     left: auto;
-    color: #FFFFFF;
-    background-color: #9CAF88;
+    color: #fff;
+    background-color: #0054AA;
 }
 
 .ptable h3 {
@@ -53,7 +53,7 @@
     padding: 10px;
     line-height: 1.2em;
     vertical-align: middle;
-    border: 1px solid #9CAF88;
+    border: 1px solid #ccc;
 }
 
 #yith-ywraq-form .update-list-wrapper input[type="submit"] {
@@ -73,7 +73,7 @@
 #yith-ywraq-form table {
     margin-top: 10px;
     margin-bottom: 10px;
-    border-right: 1px solid #9CAF88;
+    border-right: 1px solid #999;
     border-left: 0px;
     border-top: 0px;
     border-bottom: 0px;
@@ -86,8 +86,8 @@
     line-height: 1.2em;
     border-top: 0px;
     border-right: 0px;
-    border-left: 1px solid #9CAF88;
-    border-bottom: 1px solid #9CAF88;
+    border-left: 1px solid #999;
+    border-bottom: 1px solid #999;
 }
 
 .ptable .woocommerce table.shop_table th {
@@ -95,19 +95,19 @@
     padding: 0px 12px;
     line-height: 0.1em;
     font-size: 16px;
-    color: #9CAF88;
-    border-top: 1px solid #9CAF88;
+    color: #222;
+    border-top: 1px solid #999;
     border-right: 0px;
-    border-left: 1px solid #9CAF88;
-    border-bottom: 1px solid #9CAF88;
+    border-left: 1px solid #999;
+    border-bottom: 1px solid #999;
 }
 
 .ywraq-form-table-wrapper .yith-ywraq-mail-form-wrapper {
     padding: 25px;
-    border: 1px solid #9CAF88;
+    border: 1px solid #999;
     margin-top: 40px;
 }
 
 .ptable table tbody tr > td, table tbody tr > th {
-    background-color: #FFFFFF;
+    background-color: #fff;
 }/* End custom CSS */
