--- a/css/sccss.css
+++ b/css/sccss.css
@@ -28,10 +28,10 @@ input[type="radio"] {
     background-color: unset;
     margin: 0;
     font: inherit;
-    color: #9CAF88 !important;
+    color: #555 !important;
     width: 20px;
     height: 20px;
-    border: 1px solid #9CAF88 !important;
+    border: 1px solid #555 !important;
     border-radius: 50% !important;
     display: inline-grid;
     place-content: center;
@@ -44,7 +44,7 @@ input[type="radio"]::before {
     border-radius: 50%;
     transform: scale(0);
     transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em #9CAF88;
+    box-shadow: inset 1em 1em #555;
 }
 
 input[type="radio"]:checked::before {
@@ -57,10 +57,10 @@ input[type="checkbox"] {
     background-color: unset;
     margin: 0 5px 0 0 !important;
     font: inherit;
-    color: #9CAF88 !important;
+    color: #555 !important;
     width: 20px;
     height: 20px;
-    border: 1px Solid #9CAF88 !important;
+    border: 1px Solid #555 !important;
     border-radius: 3px !important;
     transform: translateY(-0.075em);
     display: inline-grid !important;
@@ -75,8 +75,8 @@ input[type="checkbox"]::before {
     transform: scale(0);
     transform-origin: center center;
     transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em #9CAF88 !important;
-    background-color: #9CAF88;
+    box-shadow: inset 1em 1em #555 !important;
+    background-color: #ddd;
 }
 
 input[type="checkbox"]:checked::before {
