--- a/css/select2.css
+++ b/css/select2.css
@@ -46,7 +46,7 @@
 
 .select2-dropdown {
   background-color: white;
-  border: 1px solid #9CAF88;
+  border: 1px solid #aaa;
   border-radius: 4px;
   box-sizing: border-box;
   display: block;
@@ -109,7 +109,7 @@
   width: auto;
   opacity: 0;
   z-index: 99;
-  background-color: #FFFFFF;
+  background-color: #fff;
   filter: alpha(opacity=0); }
 
 .select2-hidden-accessible {
@@ -123,18 +123,18 @@
   width: 1px; }
 
 .select2-container--default .select2-selection--single {
-  background-color: #FFFFFF;
-  border: 1px solid #9CAF88;
+  background-color: #fff;
+  border: 1px solid #aaa;
   border-radius: 4px; }
   .select2-container--default .select2-selection--single .select2-selection__rendered {
-	color: #9CAF88;
+	color: #444;
 	line-height: 28px; }
   .select2-container--default .select2-selection--single .select2-selection__clear {
 	cursor: pointer;
 	float: right;
 	font-weight: bold; }
   .select2-container--default .select2-selection--single .select2-selection__placeholder {
-	color: #9CAF88; }
+	color: #999; }
   .select2-container--default .select2-selection--single .select2-selection__arrow {
 	height: 26px;
 	position: absolute;
@@ -142,7 +142,7 @@
 	right: 1px;
 	width: 20px; }
 	.select2-container--default .select2-selection--single .select2-selection__arrow b {
-	  border-color: #9CAF88 transparent transparent transparent;
+	  border-color: #888 transparent transparent transparent;
 	  border-style: solid;
 	  border-width: 5px 4px 0 4px;
 	  height: 0;
@@ -158,16 +158,16 @@
   left: 1px;
   right: auto; }
 .select2-container--default.select2-container--disabled .select2-selection--single {
-  background-color: #9CAF88;
+  background-color: #eee;
   cursor: default; }
   .select2-container--default.select2-container--disabled .select2-selection--single .select2-selection__clear {
 	display: none; }
 .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
-  border-color: transparent transparent #9CAF88 transparent;
+  border-color: transparent transparent #888 transparent;
   border-width: 0 4px 5px 4px; }
 .select2-container--default .select2-selection--multiple {
   background-color: white;
-  border: 1px solid #9CAF88;
+  border: 1px solid #aaa;
   border-radius: 4px;
   cursor: text; }
   .select2-container--default .select2-selection--multiple .select2-selection__rendered {
@@ -177,7 +177,7 @@
 	padding: 0 5px;
 	width: 100%; }
   .select2-container--default .select2-selection--multiple .select2-selection__placeholder {
-	color: #9CAF88;
+	color: #999;
 	margin-top: 5px;
 	float: left; }
   .select2-container--default .select2-selection--multiple .select2-selection__clear {
@@ -187,8 +187,8 @@
 	margin-top: 5px;
 	margin-right: 10px; }
   .select2-container--default .select2-selection--multiple .select2-selection__choice {
-	background-color: #9CAF88;
-	border: 1px solid #9CAF88;
+	background-color: #e4e4e4;
+	border: 1px solid #aaa;
 	border-radius: 4px;
 	cursor: default;
 	float: left;
@@ -196,13 +196,13 @@
 	margin-top: 5px;
 	padding: 0 5px; }
   .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
-	color: #9CAF88;
+	color: #999;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: bold;
 	margin-right: 2px; }
 	.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
-	  color: #9CAF88; }
+	  color: #333; }
 .select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__choice, .select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__placeholder {
   float: right; }
 .select2-container--default[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
@@ -215,7 +215,7 @@
   border: solid black 1px;
   outline: 0; }
 .select2-container--default.select2-container--disabled .select2-selection--multiple {
-  background-color: #9CAF88;
+  background-color: #eee;
   cursor: default; }
 .select2-container--default.select2-container--disabled .select2-selection__choice__remove {
   display: none; }
@@ -226,7 +226,7 @@
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0; }
 .select2-container--default .select2-search--dropdown .select2-search__field {
-  border: 1px solid #9CAF88; }
+  border: 1px solid #aaa; }
 .select2-container--default .select2-search--inline .select2-search__field {
   background: transparent;
   border: none;
@@ -237,9 +237,9 @@
 .select2-container--default .select2-results__option[role=group] {
   padding: 0; }
 .select2-container--default .select2-results__option[aria-disabled=true] {
-  color: #9CAF88; }
+  color: #999; }
 .select2-container--default .select2-results__option[aria-selected=true] {
-  background-color: #9CAF88; }
+  background-color: #ddd; }
 .select2-container--default .select2-results__option .select2-results__option {
   padding-left: 1em; }
   .select2-container--default .select2-results__option .select2-results__option .select2-results__group {
@@ -260,7 +260,7 @@
 			margin-left: -5em;
 			padding-left: 6em; }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #9CAF88;
+  background-color: #5897fb;
   color: white; }
 .select2-container--default .select2-results__group {
   cursor: default;
@@ -268,19 +268,19 @@
   padding: 6px; }
 
 .select2-container--classic .select2-selection--single {
-  background-color: #9CAF88;
-  border: 1px solid #9CAF88;
+  background-color: #f6f6f6;
+  border: 1px solid #aaa;
   border-radius: 4px;
   outline: 0;
-  background-image: -webkit-linear-gradient(top, #FFFFFF 50%, #9CAF88 100%);
-  background-image: -o-linear-gradient(top, #FFFFFF 50%, #9CAF88 100%);
-  background-image: linear-gradient(to bottom, #FFFFFF 50%, #9CAF88 100%);
+  background-image: -webkit-linear-gradient(top, #ffffff 50%, #eeeeee 100%);
+  background-image: -o-linear-gradient(top, #ffffff 50%, #eeeeee 100%);
+  background-image: linear-gradient(to bottom, #ffffff 50%, #eeeeee 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF', endColorstr='#9CAF88', GradientType=0); }
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0); }
   .select2-container--classic .select2-selection--single:focus {
-	border: 1px solid #9CAF88; }
+	border: 1px solid #5897fb; }
   .select2-container--classic .select2-selection--single .select2-selection__rendered {
-	color: #9CAF88;
+	color: #444;
 	line-height: 28px; }
   .select2-container--classic .select2-selection--single .select2-selection__clear {
 	cursor: pointer;
@@ -288,11 +288,11 @@
 	font-weight: bold;
 	margin-right: 10px; }
   .select2-container--classic .select2-selection--single .select2-selection__placeholder {
-	color: #9CAF88; }
+	color: #999; }
   .select2-container--classic .select2-selection--single .select2-selection__arrow {
-	background-color: #9CAF88;
+	background-color: #ddd;
 	border: none;
-	border-left: 1px solid #9CAF88;
+	border-left: 1px solid #aaa;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 	height: 26px;
@@ -300,13 +300,13 @@
 	top: 1px;
 	right: 1px;
 	width: 20px;
-	background-image: -webkit-linear-gradient(top, #9CAF88 50%, #9CAF88 100%);
-	background-image: -o-linear-gradient(top, #9CAF88 50%, #9CAF88 100%);
-	background-image: linear-gradient(to bottom, #9CAF88 50%, #9CAF88 100%);
+	background-image: -webkit-linear-gradient(top, #eeeeee 50%, #cccccc 100%);
+	background-image: -o-linear-gradient(top, #eeeeee 50%, #cccccc 100%);
+	background-image: linear-gradient(to bottom, #eeeeee 50%, #cccccc 100%);
 	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9CAF88', endColorstr='#9CAF88', GradientType=0); }
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#cccccc', GradientType=0); }
 	.select2-container--classic .select2-selection--single .select2-selection__arrow b {
-	  border-color: #9CAF88 transparent transparent transparent;
+	  border-color: #888 transparent transparent transparent;
 	  border-style: solid;
 	  border-width: 5px 4px 0 4px;
 	  height: 0;
@@ -320,46 +320,46 @@
   float: left; }
 .select2-container--classic[dir="rtl"] .select2-selection--single .select2-selection__arrow {
   border: none;
-  border-right: 1px solid #9CAF88;
+  border-right: 1px solid #aaa;
   border-radius: 0;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   left: 1px;
   right: auto; }
 .select2-container--classic.select2-container--open .select2-selection--single {
-  border: 1px solid #9CAF88; }
+  border: 1px solid #5897fb; }
   .select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow {
 	background: transparent;
 	border: none; }
 	.select2-container--classic.select2-container--open .select2-selection--single .select2-selection__arrow b {
-	  border-color: transparent transparent #9CAF88 transparent;
+	  border-color: transparent transparent #888 transparent;
 	  border-width: 0 4px 5px 4px; }
 .select2-container--classic.select2-container--open.select2-container--above .select2-selection--single {
   border-top: none;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #9CAF88 50%);
-  background-image: -o-linear-gradient(top, #FFFFFF 0%, #9CAF88 50%);
-  background-image: linear-gradient(to bottom, #FFFFFF 0%, #9CAF88 50%);
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #eeeeee 50%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #eeeeee 50%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #eeeeee 50%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF', endColorstr='#9CAF88', GradientType=0); }
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0); }
 .select2-container--classic.select2-container--open.select2-container--below .select2-selection--single {
   border-bottom: none;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
-  background-image: -webkit-linear-gradient(top, #9CAF88 50%, #FFFFFF 100%);
-  background-image: -o-linear-gradient(top, #9CAF88 50%, #FFFFFF 100%);
-  background-image: linear-gradient(to bottom, #9CAF88 50%, #FFFFFF 100%);
+  background-image: -webkit-linear-gradient(top, #eeeeee 50%, #ffffff 100%);
+  background-image: -o-linear-gradient(top, #eeeeee 50%, #ffffff 100%);
+  background-image: linear-gradient(to bottom, #eeeeee 50%, #ffffff 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9CAF88', endColorstr='#FFFFFF', GradientType=0); }
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#ffffff', GradientType=0); }
 .select2-container--classic .select2-selection--multiple {
   background-color: white;
-  border: 1px solid #9CAF88;
+  border: 1px solid #aaa;
   border-radius: 4px;
   cursor: text;
   outline: 0; }
   .select2-container--classic .select2-selection--multiple:focus {
-	border: 1px solid #9CAF88; }
+	border: 1px solid #5897fb; }
   .select2-container--classic .select2-selection--multiple .select2-selection__rendered {
 	list-style: none;
 	margin: 0;
@@ -367,8 +367,8 @@
   .select2-container--classic .select2-selection--multiple .select2-selection__clear {
 	display: none; }
   .select2-container--classic .select2-selection--multiple .select2-selection__choice {
-	background-color: #9CAF88;
-	border: 1px solid #9CAF88;
+	background-color: #e4e4e4;
+	border: 1px solid #aaa;
 	border-radius: 4px;
 	cursor: default;
 	float: left;
@@ -376,13 +376,13 @@
 	margin-top: 5px;
 	padding: 0 5px; }
   .select2-container--classic .select2-selection--multiple .select2-selection__choice__remove {
-	color: #9CAF88;
+	color: #888;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: bold;
 	margin-right: 2px; }
 	.select2-container--classic .select2-selection--multiple .select2-selection__choice__remove:hover {
-	  color: #9CAF88; }
+	  color: #555; }
 .select2-container--classic[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
   float: right; }
 .select2-container--classic[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
@@ -392,7 +392,7 @@
   margin-left: 2px;
   margin-right: auto; }
 .select2-container--classic.select2-container--open .select2-selection--multiple {
-  border: 1px solid #9CAF88; }
+  border: 1px solid #5897fb; }
 .select2-container--classic.select2-container--open.select2-container--above .select2-selection--multiple {
   border-top: none;
   border-top-left-radius: 0;
@@ -402,7 +402,7 @@
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0; }
 .select2-container--classic .select2-search--dropdown .select2-search__field {
-  border: 1px solid #9CAF88;
+  border: 1px solid #aaa;
   outline: 0; }
 .select2-container--classic .select2-search--inline .select2-search__field {
   outline: 0; }
@@ -421,11 +421,11 @@
 .select2-container--classic .select2-results__option[aria-disabled=true] {
   color: grey; }
 .select2-container--classic .select2-results__option--highlighted[aria-selected] {
-  background-color: #9CAF88;
+  background-color: #3875d7;
   color: white; }
 .select2-container--classic .select2-results__group {
   cursor: default;
   display: block;
   padding: 6px; }
 .select2-container--classic.select2-container--open .select2-dropdown {
-  border-color: #9CAF88; }
+  border-color: #5897fb; }
